--- a/style.css
+++ b/style.css
@@ -61,6 +61,13 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: 'ZT Nature', sans-serif;
+    color: #333;
+    background-color: #fff;
+    -webkit-font-smoothing: antialiased;
+}
+
 
 
 /* Navigation & Header */
